--- a/index.html
+++ b/index.html
@@ -997,7 +997,7 @@
             <button class="header-btn" id="galleryBtn">Choose Mask</button>
             <button class="header-btn" id="makeMaskBtn">Create Mask</button>
         </div>
-        <div class="tap-hint">tap screen to change masks &nbsp;&nbsp;&nbsp; <button class="share-btn" id="headerShareBtn">share this app</button> <span style="opacity:0.5">v2.22-dev</span></div>
+        <div class="tap-hint">tap screen to change masks &nbsp;&nbsp;&nbsp; <button class="share-btn" id="headerShareBtn">share this app</button> <span style="opacity:0.5">v2.23-dev</span></div>
 
         <!-- Face Tracking View -->
         <div class="view active" id="trackView">
@@ -1158,7 +1158,7 @@
         // Saved masks
         const savedMasks = [];
 
-        console.log('Durrell Masks v2.22-dev loaded');
+        console.log('Durrell Masks v2.23-dev loaded');
 
         // Anchor point placement state (eyes and mouth)
         let eyePointMode = false;
@@ -4665,16 +4665,7 @@
                     e.preventDefault();
                     e.stopPropagation();
 
-                    // Check if this mask has been unlocked for editing
-                    if (!unlockedMasks.has(loadedMaskId)) {
-                        // First time for this mask - ask to unlock
-                        if (confirm('Unlock to edit position?')) {
-                            unlockedMasks.add(loadedMaskId);
-                        } else {
-                            return; // Cancelled - don't start gesture, will ask again next time
-                        }
-                    }
-
+                    // No unlock dialog for now - test live tracking
                     const data = getTouchData(e);
                     gestureState = {
                         lastDistance: data.distance,
