--- a/index.html
+++ b/index.html
@@ -1072,14 +1072,14 @@
                 <div class="header-bar" id="headerBar">
                     <button class="menu-btn" id="menuBtn">Menu</button>
                     <div class="dropdown-menu" id="dropdownMenu">
-                        <button class="menu-item" id="groupNameHeader">Choose Group</button>
-                        <button class="menu-item" id="galleryBtn">Choose Mask</button>
-                        <button class="menu-item" id="makeMaskBtn">Create Mask</button>
-                        <button class="menu-item" id="editPosBtn" style="display:none;">Edit Position</button>
-                        <button class="menu-item" id="headerShareBtn">Share This App</button>
+                        <button class="menu-item" id="groupNameHeader">Choose a different group</button>
+                        <button class="menu-item" id="galleryBtn">Pick a mask from Local-masks</button>
+                        <button class="menu-item" id="makeMaskBtn">Create your own mask</button>
+                        <button class="menu-item" id="editPosBtn" style="display:none;">Align mask to your face</button>
+                        <button class="menu-item" id="headerShareBtn">Share Mask Maker with friends</button>
                     </div>
                 </div>
-                <div class="tap-hint">tap screen to change masks <span style="opacity:0.5">v2.30-dev</span></div>
+                <div class="tap-hint">tap screen to change masks <span style="opacity:0.5">v2.31-dev</span></div>
                 <video id="video" autoplay playsinline muted></video>
                 <canvas id="debugCanvas"></canvas>
                 <div id="tapOverlay" style="position:absolute;top:0;left:0;width:100%;height:100%;z-index:100;touch-action:none;"></div>
@@ -1236,7 +1236,7 @@
         // Saved masks
         const savedMasks = [];
 
-        console.log('Durrell Masks v2.30-dev loaded');
+        console.log('Durrell Masks v2.31-dev loaded');
 
         // Anchor point placement state (eyes and mouth)
         let eyePointMode = false;
@@ -1519,6 +1519,10 @@
             // Update menu button to show admin indicator
             const menuBtn = document.getElementById('menuBtn');
             menuBtn.textContent = isAdmin ? '* Menu' : 'Menu';
+
+            // Update gallery button with current group name
+            const galleryBtn = document.getElementById('galleryBtn');
+            galleryBtn.textContent = 'Pick a mask from ' + currentGroupName;
         }
         updateHeader();
 
