--- a/index.html
+++ b/index.html
@@ -1072,6 +1072,7 @@
                 <div class="header-bar" id="headerBar">
                     <button class="menu-btn" id="menuBtn">Menu</button>
                     <div class="dropdown-menu" id="dropdownMenu">
+                        <div style="font-size:10px;color:#888;padding:4px 8px;">tap screen to change masks</div>
                         <button class="menu-item" id="groupNameHeader">Choose a different group</button>
                         <button class="menu-item" id="galleryBtn">Pick a mask from Local-masks</button>
                         <button class="menu-item" id="makeMaskBtn">Create your own mask</button>
@@ -1079,7 +1080,7 @@
                         <button class="menu-item" id="headerShareBtn">Share Mask Maker with friends</button>
                     </div>
                 </div>
-                <div class="tap-hint">tap screen to change masks <span style="opacity:0.5">v2.31-dev</span></div>
+                <div class="tap-hint"><span style="opacity:0.5">v2.32-dev</span></div>
                 <video id="video" autoplay playsinline muted></video>
                 <canvas id="debugCanvas"></canvas>
                 <div id="tapOverlay" style="position:absolute;top:0;left:0;width:100%;height:100%;z-index:100;touch-action:none;"></div>
@@ -1236,7 +1237,7 @@
         // Saved masks
         const savedMasks = [];
 
-        console.log('Durrell Masks v2.31-dev loaded');
+        console.log('Durrell Masks v2.32-dev loaded');
 
         // Anchor point placement state (eyes and mouth)
         let eyePointMode = false;
